--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
         justify-content: center;
         align-items: center;
         margin: 15px 0;
-        background-color: #1f2630; 
+        background-color: hsl(213, 19%, 18%); 
         width: 50px;
         height: 50px;
         border-radius: 50%;
